# webserve

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  README.md  TODOLIST.md  bitbucket-pipelines.yml
.circleci/: config.yml
.githooks/: README.md  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  publish.yml  release.yml  test.yml
docs/: index.html
src/: cli.rs  lib.rs  main.rs  path.rs  serve.rs  types.rs
tests/: cli_test.rs  missing_dir.rs  test.rs
