[package]
name = "webserve"
version = "1.0.2"
edition = "2024"
authors = ["Mark Wayne Menorca <marcuwynu23@gmail.com>"]
description = "A lightweight web server"
license = "MIT"


[dependencies]
serde = "1.0"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
notify = "6"
futures-util = "0.3"
mime_guess = "2.0.5"
futures = "0.3"


[[bin]]
name = "webserve"
